--- a/Meowies/Views/SearchView.axaml
+++ b/Meowies/Views/SearchView.axaml
@@ -69,7 +69,7 @@
                             HorizontalContentAlignment="Center" BorderThickness="0"/>
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                         <TextBlock Foreground="#B57CFF" FontSize="17">
-                            <Run Text="Год рождения:"/>
+                            <Run Text="Дата рождения:"/>
                             <Run Text="{Binding birthday}"/>
                         </TextBlock>
                         <TextBlock Foreground="#7D4192"  FontSize="20" Margin="9 0 0 0">
@@ -183,12 +183,12 @@
         <Grid Grid.Row="0" IsVisible="{Binding IsGoBackVisible}" Height="45"
               VerticalAlignment="Top">
             <StackPanel Orientation="Horizontal">
-                <Button HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="10 0"
+                <Button HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="10 15"
                         Background="Transparent" Command="{Binding GoBackCommand}">
                     <Image Source="../Assets/Icons/left-arrow.png" Width="40" Height="40" Stretch="Uniform"/>
                 </Button>
                 
-                <Button Height="45" VerticalContentAlignment="Center"  VerticalAlignment="Center" Margin="10 0"
+                <Button Height="45" VerticalContentAlignment="Center"  VerticalAlignment="Center" Margin="10 15"
                         Background="Transparent" Command="{Binding GoBackCommand}"
                         FontSize="20" Content="Want to go back?" Foreground="#B57CFF"/>
             </StackPanel>
