--- a/Meowies/Views/MovieView.axaml
+++ b/Meowies/Views/MovieView.axaml
@@ -15,10 +15,10 @@
     <UserControl.Resources>
         <DataTemplate x:Key="My.DataTemplates.Person" DataType="models:Person">
             <Grid>
-                <TextBlock Text="{Binding name}" Foreground="#B57CFF" Margin="0 5"
+                <TextBlock Text="{Binding enName}" Margin="0 0 0 12" 
+                           FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#B5ACFF"/>
+                <TextBlock Text="{Binding name}" Foreground="#B57CFF" Margin="0 12 0 0"
                            FontSize="20" HorizontalAlignment="Center" Background="Transparent"/>
-                <TextBlock Text="{Binding enName}"
-                           FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#B58CFA"/>
             </Grid>
         </DataTemplate>
     </UserControl.Resources>
@@ -31,7 +31,7 @@
     </UserControl.DataTemplates>
     
     
-    <Grid Height="750" ClipToBounds="True" RowDefinitions="50, Auto">
+    <Grid Height="750" ClipToBounds="True" RowDefinitions="60, Auto" Width="800">
         <Grid Grid.Row="0" IsVisible="{Binding IsMovieVisible}" Height="45"
               VerticalAlignment="Top">
             <Grid.Styles>
@@ -42,11 +42,11 @@
                 </Style>
             </Grid.Styles>
             <StackPanel Orientation="Horizontal">
-                <Button HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="12 5"
+                <Button HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="12 20 12 10"
                         Background="Transparent" Command="{Binding FindAMovieCommand}">
                     <Image Source="../Assets/Icons/stars.png" Width="40" Height="40" Stretch="Uniform"/>
                 </Button>
-                <Button Height="45" VerticalContentAlignment="Center"  VerticalAlignment="Center" Margin="10 5"
+                <Button Height="45" VerticalContentAlignment="Center"  VerticalAlignment="Center" Margin="10 20 12 10"
                         Background="Transparent" Command="{Binding FindAMovieCommand}"
                         FontSize="20" Content="Find more" Foreground="#B57CFF"/>
             </StackPanel>
@@ -96,7 +96,7 @@
                 </StackPanel>
             </StackPanel>
             <StackPanel Grid.Column="1" Margin="10" VerticalAlignment="Center">
-                <TextBlock Text="{Binding Item.alternativeName}" 
+                <TextBlock Text="{Binding Item.name}" 
                            VerticalAlignment="Center" Foreground="#4F13B1" HorizontalAlignment="Center" FontSize="40" 
                            TextWrapping="Wrap" TextAlignment="Center" Margin="17"/>
                 <StackPanel Margin="17">
